--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </nav>
         <ul class="list contacts">
             <!-- Почта и телефон -->
-            <li class="item" > <a  class="link nav-contacts" href="mailto:info@devstudio.com"> <svg class="envelope"> <use href=./images/symbol-defs.svg#envelope></use> </svg> info@devstudio.com</a></li>
-            <li class="item"> <a class="link nav-contacts" href="tel:+380961111111"> <svg class="smartphone"> <use href=./images/symbol-defs.svg#smartphone ></use> </svg> +38 096 111 11 11</a></li>
+            <li class="item" > <a  class="link nav-contacts" href="mailto:info@devstudio.com"> <svg class="envelope"> <use href=./images/icons.svg#envelope></use> </svg> info@devstudio.com</a></li>
+            <li class="item"> <a class="link nav-contacts" href="tel:+380961111111"> <svg class="smartphone"> <use href=./images/icons.svg#smartphone ></use> </svg> +38 096 111 11 11</a></li>
         </ul>
         </div>
     </header>
